@@ -1,4 +1,4 @@
-use Test2::Bundle::Extended;
+use Test2::V0 -no_srand => 1;
 use Test::Alien 0.11;
 use Alien::nasm ();
 
