@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - For MSWin32 download binaries of nasm to avoid MSYS
 
 0.18      2017-03-01 19:10:26 +1100
   - Remove dep on Alien::Base2.  Use Alien::Base directly.
